# mcp-cn-a-stock

./: .gitignore  README.md  data.py  main.py  pyproject.toml  start.sh  stop.sh  test_stock_hist.py
confs/: indices.json
docs/: SH603986-full.md
qtf_mcp/: config.py  datafeed.py  mcp_app.py  research.py
qtf_mcp/datasource/: __init__.py  akshare_source.py  base.py  cn_stock_source.py  realtime_ff.py
tests/: conftest.py  get_fund_flow_browser.py  get_fund_flow_browser_optimized.py  test_akshare_source.py  test_research.py  test_stock_data.py
tests_research/: analyze_accuracy.py  check_25th.py  check_ak_amp.py  check_ak_spot.py  check_ak_val.py  check_all_cols.py  check_all_fin_dates.py  check_ef_caps.py  check_ef_fields.py  check_ef_fqt.py  check_ef_snapshot.py  check_em_ind.py  check_em_ind_val.py  check_etf_fallback.py  check_indicators.py  check_indicators_new.py  check_lg.py  check_navps.py  check_pb_caps.py  check_qfq_amp.py  check_snap_amp.py  check_tail_fin.py  check_valuation.py  compare_kdj.py  debug_amplitude.py  debug_turnover.py  debug_val_source.py  find_pb.py  get_pb_hist.py  search_static_pe.py  test_etf.py  test_refactor.py  test_stock_hist.py
